Changelog
=========

Changes from cgkit-2.0.0alpha7 to cgkit-2.0.0alpha8:

New features:

Bug fixes/enhancements:

- asfamcimport: Updates because the mat3.fromEuler*() methods are now static.
- euleradapter: Updates because the mat3.fromEuler*() methods are now static.
- BoundingBox: New method center() that returns the center of the box.
- BoundingBox: getBounds() now accepts an optional direction that controls
  which corners will get returned.
- BoundingBox: New method clamp() that clamps a point so that it lies
  within the bounding box.
- vec3: The C++ implementation of ortho() is now more stable (now it matches
  the version in the pure Python implementation)
- vec3/vec4: Finished and exposed the min(), max(), minIndex(), maxIndex(),
  minAbs(), maxAbs(), minAbsIndex() and maxAbsIndex() methods.
- quat: New method rotateVec() to rotate a vector about a unit quaternion.
- mat3: New static method fromToRotation() to create a rotation matrix that 
  rotates one vector into another.
- mat3: Bugfix: There was a typo in toEulerZYX() which has led to incorrect
  results.
- mat3: identity(), scaling(), rotation() and the fromEuler*() methods are 
  now static methods, so you don't have to create a temporary instance 
  anymore just to invoke those methods. Note: fromEuler*() now just returns
  a rotation matrix but does not initialize self anymore!
- mat4: identity(), scaling(), rotation(), frustum(), perspective(), 
  orthographic() and lookAt() are now static methods, so you don't have
  to create a temporary instance anymore just to invoke those methods.
  (in cgkit light, mat4 was modifying self. This has been changed so that
  it matches the regular version)
- mat3/mat4/vec3 (light version): The methods taking a vec3 now also
  accept any other 3-sequence of floats (as the regular version is already
  doing).
- quat (light version): Added the "shortest" argument (as done in the
  previous release with the regular version).